Fixed almost all methods